--- a/McGee, Robinson, Alzuhary/buy.html
+++ b/McGee, Robinson, Alzuhary/buy.html
@@ -25,9 +25,9 @@
         <div class="column">
             <div class="card">
                 <img src="Pocobottle.png" style="width:100%">
-                <h1>Poco Loco Mild</h1>
+                <h1>Poco Loco Original</h1>
                 <p class="price">$8.99</p>
-                <p>Perfect for the whole family. Home grown real organic ingridents.</p>
+                <p>Enjoy the classic taste of our special all-organic pepper blend. Perfect for the whole family.</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
@@ -36,7 +36,7 @@
                 <img src="buffalo.png" style="width:100%">
                 <h1>Poco Loco Buffalo</h1>
                 <p class="price">$9.99</p>
-                <p>Same great organic ingridents for the whole family new tangy buffalo flavor.</p>
+                <p>Same great organic ingredients, new tangy buffalo flavor.</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
@@ -45,16 +45,16 @@
                 <img src="atomic.png" style="width:100%">
                 <h1>Poco Loco Atomic</h1>
                 <p class="price">$11.99</p>
-                <p>Amp up the spicy with our new ghost pepper based all organic hot sauce</p>
+                <p>Amp up the spicy with our NEW organic ghost pepper based hot sauce!</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
         <div class="column">
             <div class="card">
                 <img src="Pocobottle.png" style="width:100%">
-                <h1>Poco Loco Original</h1>
+                <h1>Poco Loco Mild</h1>
                 <p class="price">$8.99</p>
-                <p>Perfect for the whole family. Home grown real organic ingridents.</p>
+                <p>Perfect for the whole family. Made with real, home grown, organic ingredients.</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
@@ -62,37 +62,37 @@
     <div class="row">
         <div class="column">
             <div class="card">
-                <img src="Pocobottle.png" style="width:100%">
-                <h1>Poco Loco Original</h1>
-                <p class="price">$8.99</p>
-                <p>Perfect for the whole family. Home grown real organic ingridents.</p>
+                <img src="scotchbonnet.png" style="width:100%">
+                <h1>Poco Loco Jamaican Blend</h1>
+                <p class="price">$11.99</p>
+                <p>A unique twist on the classic Poco Loco blend featuring organic Scotch Bonnet peppers.</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
         <div class="column">
             <div class="card">
-                <img src="buffalo.png" style="width:100%">
-                <h1>Poco Loco Buffalo</h1>
+                <img src="ketchup.png" style="width:100%">
+                <h1>Poco Loco Ketchup</h1>
                 <p class="price">$9.99</p>
-                <p>Same great organic ingridents for the whole family new tangy buffalo flavor.</p>
+                <p>Perfect for dipping, marinades, sauces, and all your favorite recipes!</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
         <div class="column">
             <div class="card">
-                <img src="atomic.png" style="width:100%">
-                <h1>Poco Loco Atomic</h1>
+                <img src="exotic.png" style="width:100%">
+                <h1>Poco Loco Exotic</h1>
                 <p class="price">$11.99</p>
-                <p>Amp up the spicy with our new ghost pepper based all organic hot sauce</p>
+                <p>Poco Loco like you’ve never had it before. Sweet, sour, and smoky.</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
         <div class="column">
             <div class="card">
-                <img src="atomic.png" style="width:100%">
-                <h1>Poco Loco Atomic</h1>
-                <p class="price">$11.99</p>
-                <p>Amp up the spicy with our new ghost pepper based all organic hot sauce</p>
+                <img src="ranch.png" style="width:100%">
+                <h1>Poco Loco Ranch</h1>
+                <p class="price">$9.99</p>
+                <p>For those looking to have the Poco Loco kick without feeling the burn.</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
@@ -104,25 +104,25 @@
                 <img src="shirt.png" style="width:100%">
                 <h1>Poco Loco Shirt</h1>
                 <p class="price">$21.99</p>
-                <p>Awesome shirt to show you've got a wild side</p>
+                <p>Awesome shirt to show you've got a wild side.</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
         <div class="column">
             <div class="card">
-                <img src="shirt.png" style="width:100%">
-                <h1>Poco Loco Shirt</h1>
+                <img src="crewneck.png" style="width:100%">
+                <h1>Poco Loco Crewneck</h1>
                 <p class="price">$21.99</p>
-                <p>Awesome shirt to show you've got a wild side</p>
+                <p>Awesome crewneck to show you've got a wild side.</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
         <div class="column">
             <div class="card">
-                <img src="shirt.png" style="width:100%">
-                <h1>Poco Loco Shirt</h1>
+                <img src="Hoodie.png" style="width:95%">
+                <h1>Poco Loco Hoodie</h1>
                 <p class="price">$21.99</p>
-                <p>Awesome shirt to show you've got a wild side</p>
+                <p>Awesome hoodie to show you've got a wild side.</p>
                 <p><button>Add to Cart</button></p>
             </div>
         </div>
